# VibeClip-Pro

./: .check-build.js  .gitignore  ALIYUN_FIX_README.md  CHANGELOG.md  LICENSE  PRIVACY.md  PR_DESCRIPTION_v2.9.3.md  README.md  RELEASE_NOTES_v2.9.1.md  UI_FIX_SUMMARY.md  components.d.ts  package.json  patch-build-docs.diff  patch-core.diff  patch-ui.diff  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/ISSUE_TEMPLATE/: config.yml  其他问题---other-problem.md  功能需求---feature-request.md  功能需求---feature-request.yaml  错误反馈---bug-report.md  错误反馈---bug-report.yaml
.github/workflows/: build.yml
.scripts/: bump.ts
docs/: aliyun-bailian-setup.md  paste-me-gap-analysis.md  release-guide.md
src/: App.vue  AppInfo.ts  index.css  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  manifest.xml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_client.rs  clipboard.rs  clipboard_watcher.rs  db.rs  hash.rs  lib.rs  main.rs  runtime_config.rs  state.rs  tray.rs
src/components/: AIChat.vue  HijackedATag.vue  KeySelector.vue  Toast.vue
src/components/ai/: AiQuickActions.vue  AiResultPreview.vue
src/components/history/: HistoryItem.vue
src/components/layout/: AppSidebar.vue  AppWindowBar.vue  WindowTitleBar.vue
src/components/onboarding/: AppOnboarding.vue
src/components/system/: AppEventBridge.vue  GlobalContextMenu.vue
src/composables/: useAI.ts  useAutoStart.ts  useClipboard.ts  useConfig.ts  useContextMenu.ts  useLocale.ts  usePanelWindow.ts  useShortcut.ts  useUpdater.ts  useWindowSync.ts  useWorkflowDiagnostics.ts
src/libs/: bridges.ts  store.ts  tauri.ts  utils.ts
src/pages/: AiTools.vue  ApiConfig.vue  Clipboard.vue  Favorites.vue  History.vue  Home.vue  Panel.vue  QuickPanel.vue  Settings.vue
src/router/: index.ts
src/routes/: index.ts
src/store/: bridge.ts  history.ts  settings.ts
src/styles/: modern-theme.css  theme.css
src/types/: ai-overrides.d.ts  history.ts
src/utils/: content-inspector.ts  notifier.ts  offline-translator.ts  routePrefetch.ts
