[package]
name = "vibeclip_pro"
version = "2.2.0"
description = "VibeClip Pro desktop clipboard companion"
authors = ["VibeClip Contributors"]
edition = "2021"

[lib]
name = "vibeclip_pro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.3.1", features = ["tray-icon"] }
tauri-plugin-opener = "2.2.6"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-process = "2"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
tauri-plugin-cors-fetch = "3.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"
serde_repr = "0.1"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
anyhow = "1.0"
blake3 = "1.5"
image = { version = "0.25", default-features = false, features = ["png"] }
tokio = { version = "1.0", features = ["time"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2.2.2"
tauri-plugin-updater = "2.5.1"

enigo = "0.3.0"
